Refactor: introduce DTOs, remove Map usage, and add debug logging