@@ -1,19 +1,23 @@
 package com.example.commercetoolsDemo.service;
 
-import com.example.commercetoolsDemo.dto.request.*;
-import com.example.commercetoolsDemo.dto.request.CartUpdateRequest.CartAction;
-import com.example.commercetoolsDemo.dto.request.CartUpdateRequest.Address;
-import com.example.commercetoolsDemo.dto.request.CartUpdateRequest.ShippingMethodReference;
-import com.example.commercetoolsDemo.dto.response.*;
+import com.example.api.model.*;
+//import com.example.commercetoolsDemo.dto.request.CartUpdateRequest;
+//import com.example.commercetoolsDemo.dto.request.CreateCartRequest;
+//import com.example.commercetoolsDemo.dto.request.CreateOrderRequest;
+//import com.example.commercetoolsDemo.dto.request.CartUpdateRequest.CartAction;
+//import com.example.commercetoolsDemo.dto.request.CartUpdateRequest.Address;
+//import com.example.commercetoolsDemo.dto.request.CartUpdateRequest.ShippingMethodReference;
+//import com.example.commercetoolsDemo.dto.response.CartListResponse;
+//import com.example.commercetoolsDemo.dto.response.CartResponse;
+//import com.example.commercetoolsDemo.dto.response.OrderListResponse;
+//import com.example.commercetoolsDemo.dto.response.OrderResponse;
 import com.example.commercetoolsDemo.feign.MeFeignClient;
-import com.example.commercetoolsDemo.mapper.ResponseMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
-import java.util.Map;
+import java.util.List;
 
 @Slf4j
 @Service
@@ -21,174 +25,215 @@ import java.util.Map;
 public class MeService {
 
     private final MeFeignClient meFeignClient;
-    private final ResponseMapper responseMapper;
 
     @Value("${ct.projectKey}")
     private String projectKey;
 
-    // ============= CART OPERATIONS =============
+    // ================= CART =================
 
     public CartResponse getMyActiveCart(String token) {
-        log.info("Fetching active cart");
-        Map<String, Object> ctResponse = (Map<String, Object>) meFeignClient.getMyActiveCart(projectKey, token);
-        return responseMapper.mapToCartResponse(ctResponse);
+        log.info("MeService#getMyActiveCart started");
+        CartResponse response = meFeignClient.getMyActiveCart(projectKey, token);
+        log.info("MeService#getMyActiveCart completed | cartId={}", response.getId());
+        return response;
     }
 
     public CartListResponse getMyCarts(String token) {
-        log.info("Fetching all carts");
-        Map<String, Object> ctResponse = (Map<String, Object>) meFeignClient.getMyCarts(projectKey, token);
-        return responseMapper.mapToCartListResponse(ctResponse);
+        log.info("MeService#getMyCarts started");
+        CartListResponse response = meFeignClient.getMyCarts(projectKey, token);
+        log.info("MeService#getMyCarts completed | total={}", response.getTotal());
+        return response;
     }
 
     public CartResponse getMyCartById(String id, String token) {
-        log.info("Fetching cart with ID: {}", id);
-        Map<String, Object> ctResponse = (Map<String, Object>) meFeignClient.getMyCartById(projectKey, id, token);
-        return responseMapper.mapToCartResponse(ctResponse);
+        log.info("MeService#getMyCartById started | cartId={}", id);
+        CartResponse response = meFeignClient.getMyCartById(projectKey, id, token);
+        log.info("MeService#getMyCartById completed | cartId={}", id);
+        return response;
     }
 
-    public CartResponse createMyCart(String auth, CreateCartRequest body) {
-        log.info("Creating cart with request: {}", body);
-        Map<String, Object> ctResponse = (Map<String, Object>) meFeignClient.createMyCart(projectKey, auth, body);
-        return responseMapper.mapToCartResponse(ctResponse);
+    public CartResponse createMyCart(String token, CreateCartRequest request) {
+        log.info("MeService#createMyCart started");
+        log.debug("CreateCartRequest={}", request);
+        CartResponse response = meFeignClient.createMyCart(projectKey, token, request);
+        log.info("MeService#createMyCart completed | cartId={}", response.getId());
+        return response;
     }
 
-    public CartResponse addLineItemToCart(String cartId, String token, Long version,
-                                          String productId, Integer variantId, Integer quantity) {
-        log.info("Adding line item to cart {}: productId={}, variantId={}, quantity={}",
-                cartId, productId, variantId, quantity);
+    // ================= CART ACTIONS =================
 
-        CartAction action = CartAction.builder()
-                .action("addLineItem")
-                .productId(productId)
-                .variantId(variantId)
-                .quantity(quantity)
-                .build();
+    public CartResponse addLineItemToCart(
+            String cartId,
+            String token,
+            Long version,
+            String productId,
+            Integer variantId,
+            Integer quantity
+    ) {
+        log.info("MeService#addLineItemToCart started | cartId={}", cartId);
 
-        CartUpdateRequest request = CartUpdateRequest.builder()
-                .version(version)
-                .actions(Collections.singletonList(action))
-                .build();
+        CartAction action = new CartAction();
+        action.setAction("addLineItem");
+        action.setProductId(productId);
+        action.setVariantId(variantId);
+        action.setQuantity(quantity);
 
-        Map<String, Object> ctResponse = (Map<String, Object>) meFeignClient.updateMyCart(projectKey, cartId, token, request);
-        return responseMapper.mapToCartResponse(ctResponse);
+        CartUpdateRequest request = new CartUpdateRequest();
+        request.setVersion(version);
+        request.setActions(List.of(action));
+
+        CartResponse response =
+                meFeignClient.updateMyCart(projectKey, cartId, token, request);
+
+        log.info("MeService#addLineItemToCart completed | cartId={}", cartId);
+        return response;
     }
 
-    public CartResponse setShippingAddress(String cartId, String token, Long version,
-                                           String streetName, String streetNumber,
-                                           String city, String state,
-                                           String postalCode, String country) {
-        log.info("Setting shipping address for cart {}", cartId);
+    public CartResponse setShippingAddress(
+            String cartId,
+            String token,
+            Long version,
+            String streetName,
+            String streetNumber,
+            String city,
+            String state,
+            String postalCode,
+            String country
+    ) {
+        log.info("MeService#setShippingAddress started | cartId={}", cartId);
 
-        Address address = Address.builder()
-                .streetName(streetName)
-                .streetNumber(streetNumber)
-                .city(city)
-                .state(state)
-                .postalCode(postalCode)
-                .country(country)
-                .build();
+        Address address = new Address();
+        address.setStreetName(streetName);
+        address.setStreetNumber(streetNumber);
+        address.setCity(city);
+        address.setState(state);
+        address.setPostalCode(postalCode);
+        address.setCountry(country);
 
-        CartAction action = CartAction.builder()
-                .action("setShippingAddress")
-                .address(address)
-                .build();
+        CartAction action = new CartAction();
+        action.setAction("setShippingAddress");
+        action.setAddress(address);
 
-        CartUpdateRequest request = CartUpdateRequest.builder()
-                .version(version)
-                .actions(Collections.singletonList(action))
-                .build();
+        CartUpdateRequest request = new CartUpdateRequest();
+        request.setVersion(version);
+        request.setActions(List.of(action));
 
-        Map<String, Object> ctResponse = (Map<String, Object>) meFeignClient.updateMyCart(projectKey, cartId, token, request);
-        return responseMapper.mapToCartResponse(ctResponse);
+        CartResponse response =
+                meFeignClient.updateMyCart(projectKey, cartId, token, request);
+
+        log.info("MeService#setShippingAddress completed | cartId={}", cartId);
+        return response;
     }
 
-    public CartResponse setBillingAddress(String cartId, String token, Long version,
-                                          String streetName, String streetNumber,
-                                          String city, String state,
-                                          String postalCode, String country) {
-        log.info("Setting billing address for cart {}", cartId);
+    public CartResponse setBillingAddress(
+            String cartId,
+            String token,
+            Long version,
+            String streetName,
+            String streetNumber,
+            String city,
+            String state,
+            String postalCode,
+            String country
+    ) {
+        log.info("MeService#setBillingAddress started | cartId={}", cartId);
 
-        Address address = Address.builder()
-                .streetName(streetName)
-                .streetNumber(streetNumber)
-                .city(city)
-                .state(state)
-                .postalCode(postalCode)
-                .country(country)
-                .build();
+        Address address = new Address();
+        address.setStreetName(streetName);
+        address.setStreetNumber(streetNumber);
+        address.setCity(city);
+        address.setState(state);
+        address.setPostalCode(postalCode);
+        address.setCountry(country);
 
-        CartAction action = CartAction.builder()
-                .action("setBillingAddress")
-                .address(address)
-                .build();
+        CartAction action = new CartAction();
+        action.setAction("setBillingAddress");
+        action.setAddress(address);
 
-        CartUpdateRequest request = CartUpdateRequest.builder()
-                .version(version)
-                .actions(Collections.singletonList(action))
-                .build();
+        CartUpdateRequest request = new CartUpdateRequest();
+        request.setVersion(version);
+        request.setActions(List.of(action));
 
-        Map<String, Object> ctResponse = (Map<String, Object>) meFeignClient.updateMyCart(projectKey, cartId, token, request);
-        return responseMapper.mapToCartResponse(ctResponse);
+        CartResponse response =
+                meFeignClient.updateMyCart(projectKey, cartId, token, request);
+
+        log.info("MeService#setBillingAddress completed | cartId={}", cartId);
+        return response;
     }
 
-    public CartResponse setShippingMethod(String cartId, String token, Long version,
-                                          String shippingMethodId) {
-        log.info("Setting shipping method for cart {}: {}", cartId, shippingMethodId);
+    public CartResponse setShippingMethod(
+            String cartId,
+            String token,
+            Long version,
+            String shippingMethodId
+    ) {
+        log.info("MeService#setShippingMethod started | cartId={}", cartId);
 
-        ShippingMethodReference shippingMethod = ShippingMethodReference.builder()
-                .typeId("shipping-method")
-                .id(shippingMethodId)
-                .build();
+        ShippingMethodReference shippingMethod = new ShippingMethodReference();
+        shippingMethod.setTypeId("shipping-method");
+        shippingMethod.setId(shippingMethodId);
 
-        CartAction action = CartAction.builder()
-                .action("setShippingMethod")
-                .shippingMethod(shippingMethod)
-                .build();
+        CartAction action = new CartAction();
+        action.setAction("setShippingMethod");
+        action.setShippingMethod(shippingMethod);
 
-        CartUpdateRequest request = CartUpdateRequest.builder()
-                .version(version)
-                .actions(Collections.singletonList(action))
-                .build();
+        CartUpdateRequest request = new CartUpdateRequest();
+        request.setVersion(version);
+        request.setActions(List.of(action));
 
-        Map<String, Object> ctResponse = (Map<String, Object>) meFeignClient.updateMyCart(projectKey, cartId, token, request);
-        return responseMapper.mapToCartResponse(ctResponse);
+        CartResponse response =
+                meFeignClient.updateMyCart(projectKey, cartId, token, request);
+
+        log.info("MeService#setShippingMethod completed | cartId={}", cartId);
+        return response;
     }
 
     public CartResponse updateMyCart(String cartId, String token, CartUpdateRequest request) {
-        log.info("Updating cart {} with actions: {}", cartId, request.getActions());
-        Map<String, Object> ctResponse = (Map<String, Object>) meFeignClient.updateMyCart(projectKey, cartId, token, request);
-        return responseMapper.mapToCartResponse(ctResponse);
+        log.info("MeService#updateMyCart started | cartId={}", cartId);
+        CartResponse response =
+                meFeignClient.updateMyCart(projectKey, cartId, token, request);
+        log.info("MeService#updateMyCart completed | cartId={}", cartId);
+        return response;
     }
 
     public CartResponse deleteMyCart(String id, Long version, String token) {
-        log.info("Deleting cart with ID: {}", id);
-        Map<String, Object> ctResponse = (Map<String, Object>) meFeignClient.deleteMyCart(projectKey, id, version, token);
-        return responseMapper.mapToCartResponse(ctResponse);
+        log.info("MeService#deleteMyCart started | cartId={}, version={}", id, version);
+        CartResponse response =
+                meFeignClient.deleteMyCart(projectKey, id, version, token);
+        log.info("MeService#deleteMyCart completed | cartId={}", id);
+        return response;
     }
 
-    // ============= ORDER OPERATIONS =============
+    // ================= ORDER =================
 
     public OrderResponse createMyOrder(String token, String cartId, Long cartVersion) {
-        log.info("Creating order from cart ID: {}, version: {}", cartId, cartVersion);
+        log.info("MeService#createMyOrder started | cartId={}, version={}", cartId, cartVersion);
 
-        CreateOrderRequest request = CreateOrderRequest.builder()
-                .id(cartId)
-                .version(cartVersion)
-                .build();
+        CreateOrderRequest request = new CreateOrderRequest();
+        request.setCartId(cartId);
+        request.setCartVersion(cartVersion);
 
-        Map<String, Object> ctResponse = (Map<String, Object>) meFeignClient.createMyOrder(projectKey, token, request);
-        return responseMapper.mapToOrderResponse(ctResponse);
+        OrderResponse response =
+                meFeignClient.createMyOrder(projectKey, token, request);
+
+        log.info("MeService#createMyOrder completed | orderId={}", response.getId());
+        return response;
     }
 
+
     public OrderListResponse getMyOrders(String token) {
-        log.info("Fetching all orders");
-        Map<String, Object> ctResponse = (Map<String, Object>) meFeignClient.getMyOrders(projectKey, token);
-        return responseMapper.mapToOrderListResponse(ctResponse);
+        log.info("MeService#getMyOrders started");
+        OrderListResponse response =
+                meFeignClient.getMyOrders(projectKey, token);
+        log.info("MeService#getMyOrders completed | total={}", response.getTotal());
+        return response;
     }
 
     public OrderResponse getMyOrderById(String id, String token) {
-        log.info("Fetching order with ID: {}", id);
-        Map<String, Object> ctResponse = (Map<String, Object>) meFeignClient.getMyOrderById(projectKey, id, token);
-        return responseMapper.mapToOrderResponse(ctResponse);
+        log.info("MeService#getMyOrderById started | orderId={}", id);
+        OrderResponse response =
+                meFeignClient.getMyOrderById(projectKey, id, token);
+        log.info("MeService#getMyOrderById completed | orderId={}", id);
+        return response;
     }
 }
